# Drone-Delivery

./: README.md
App/: app-debug (1).apk  app-debug.apk
Arming_KK2/: Arming_KK2.ino  beaglebone_kk2.py
Codes for Testing/apriltags-master/: .gitignore  CMakeLists.txt  README.md  README.txt  apriltagsConfig.cmake.in  apriltagsConfigVersion.cmake.in
Codes for Testing/apriltags-master/example/: CMakeLists.txt  apriltags_demo.cpp
Codes for Testing/apriltags-master/include/apriltags/: Segment.h  Tag16h5.h  Tag16h5_other.h  Tag25h7.h  Tag25h9.h  Tag36h11.h  Tag36h11_other.h  Tag36h9.h  TagDetection.h  TagDetectionUtils.h  TagDetector.h
Codes for Testing/apriltags-master/src/: CMakeLists.txt  Edge.cc  Homography33.cc  Quad.cc  Segment.cc  TagDetection.cc  TagDetectionUtils.cc  TagDetector.cc  TagFamily.cc
Codes for Testing/odroid_code/: blink  readme  s1.c  s2  s2.c  s3  s3.c  servo.c  servotest.c  ultrasonic  ultrasonic.c
Codes for Testing/odroid_code/ultrasonic_test/: CMakeLists.txt  package.xml
Codes for Testing/odroid_code/ultrasonic_test/src/: ros_ultrasonic.cpp
Codes for Testing/ws/devel/: .catkin  .rosinstall  setup.sh
Codes for Testing/ws/devel/include/ab/: Num.h
Codes for Testing/ws/devel/lib/ab/: offb_node
Codes for Testing/ws/devel/lib/pkgconfig/: ab.pc
Codes for Testing/ws/devel/lib/python2.7/dist-packages/ab/msg/: _Num.py
Codes for Testing/ws/devel/share/ab/cmake/: ab-msg-paths.cmake  abConfig.cmake
Codes for Testing/ws/devel/share/common-lisp/ros/ab/msg/: Num.lisp  _package.lisp  _package_Num.lisp  ab-msg.asd
Codes for Testing/ws/devel/share/gennodejs/ros/ab/msg/: Num.js
Codes for Testing/ws/devel/share/roseus/ros/ab/: manifest.l
Codes for Testing/ws/devel/share/roseus/ros/ab/msg/: Num.l
Codes for Testing/ws/src/ab/: CMakeLists.txt  package.xml
Codes for Testing/ws/src/ab/src/: offb_node.cpp  offb_node1.cpp
Codes for Testing/ws1/devel/: .catkin  .rosinstall  setup.sh
Codes for Testing/ws1/devel/lib/ip/: image_converter
Codes for Testing/ws1/devel/lib/pkgconfig/: ip.pc
Codes for Testing/ws1/devel/share/ip/cmake/: ipConfig.cmake
Codes for Testing/ws1/src/ip/: CMakeLists.txt
Codes for Testing/ws1/src/ip/src/: image_converter.cpp
Codes for Testing/ws2/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
Codes for Testing/ws2/devel/lib/main/: apriltags_demo
Codes for Testing/ws2/devel/lib/pkgconfig/: main.pc
Codes for Testing/ws2/devel/share/main/cmake/: mainConfig.cmake
Codes for Testing/ws2/src/main/: CMakeLists.txt
Codes for Testing/ws2/src/main/arduino_tags/.svn/: all-wcprops  entries
Codes for Testing/ws2/src/main/src/: apriltags_demo.cpp
Codes for Testing/ws3/devel/: .catkin  .rosinstall  setup.sh
Codes for Testing/ws3/devel/lib/final/: apriltags_demo
Codes for Testing/ws3/devel/lib/pkgconfig/: final.pc
Codes for Testing/ws3/devel/share/final/cmake/: finalConfig.cmake
Codes for Testing/ws3/src/final/: CMakeLists.txt  apriltags_demo.cpp
Codes for Testing/ws3/src/final/src/: apriltags_demo.cpp
Codes for Testing/ws4/devel/: .catkin  .rosinstall  setup.sh
Codes for Testing/ws4/devel/lib/main1/: apriltags_demo
Codes for Testing/ws4/devel/lib/pkgconfig/: main1.pc
Codes for Testing/ws4/devel/share/main1/cmake/: main1Config.cmake
Codes for Testing/ws4/src/main1/: CMakeLists.txt  package.xml
Codes for Testing/ws4/src/main1/src/: apriltags_demo.cpp
Exexute Mission/: nohup.out
Exexute Mission/src/main3/: BenchmarkDetections.cc  CMakeLists.txt  Makefile  package.xml
Exexute Mission/src/main3/src/: apriltags_demo.cpp  apriltags_demoDocumented.cpp
Exexute Mission/test/: blink.c  s1  s2  s2.c  s3  s3.c  servotest
Feed Mission/src/ab/: CMakeLists.txt
Feed Mission/src/ab/src/: offb_node.cpp
GUI/: blowhorn.py  blowhorn_sim.py  readme
log_Data/: 2017-08-1 17-18-12.csv  2017-08-1 17-18-12.txt  gps_module.xlsx
